	PR rtl-optimization/52113 	* lower-subreg.c (decompose_multiword_subregs): Call recog_memoized 	even for decomposable shift/zext insns.

* gcc.target/avr/pr52113.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@183894 138bc75d-0d04-0410-961f-82ee72b054a4